fixed weird margin bug on mobile

--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -275,6 +275,14 @@ a {
         min-height: 0;
         min-width: 0;
     }
+
+    .left-wrapper {
+        margin-left: 0;
+    }
+
+    .right-wrapper {
+        margin-left: 0;
+    }
 }
 
 
